--- a/roles/system-config/tasks/shell-config.yml
+++ b/roles/system-config/tasks/shell-config.yml
@@ -31,7 +31,7 @@
 - name: Add customization to '.zshrc' file
   blockinfile:
     path: /home/william/.zshrc
-    marker: # {mark} ANSIBLE MANAGED BLOCK
+    insertafter: EOF
     block: |
       # Use lf to switch directories and bind it to ctrl-o
       lfcd () {
@@ -43,9 +43,15 @@
           [ -d "$dir" ] && [ "$dir" != "$(pwd)" ] && cd "$dir"
         fi
       }
-      
+
       bindkey -s '^o' 'lfcd\n'
       # Custom WZ Aliases in .config/folder
       [ -f "$HOME/.config/aliasrc" ] && source "$HOME/.config/aliasrc"
       # Load ; should be last.
       source /usr/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh 2>/dev/null
+
+- name: Customize 'bureau' theme in oh-my-zsh
+  replace:
+    path: /home/william/.oh-my-zsh/themes/bureau.zsh-theme
+    regex: '(^_USERNAME=_USERNAME%{$fg_bold)(.*)$'
+    replace: '_USERNAME="$_USERNAME%{$fg_bold[yellow]%}@%m%{$reset_color%}"'
