customize colors on oh my zsh theme

--- a/roles/system-config/tasks/shell-config.yml
+++ b/roles/system-config/tasks/shell-config.yml
@@ -53,5 +53,5 @@
 - name: Customize 'bureau' theme in oh-my-zsh
   replace:
     path: /home/william/.oh-my-zsh/themes/bureau.zsh-theme
-    regex: '(^_USERNAME=_USERNAME%{$fg_bold)(.*)$'
+    regexp: "(^_USERNAME="$_USERNAME%{$reset_color%}@%m")$"
     replace: '_USERNAME="$_USERNAME%{$fg_bold[yellow]%}@%m%{$reset_color%}"'
