change the arrow in the theme

--- a/roles/system-config/tasks/shell-config.yml
+++ b/roles/system-config/tasks/shell-config.yml
@@ -55,3 +55,9 @@
     path: /home/william/.oh-my-zsh/themes/bureau.zsh-theme
     regexp: "(^_USERNAME="$_USERNAME%{$reset_color%}@%m")$"
     replace: '_USERNAME="$_USERNAME%{$fg_bold[yellow]%}@%m%{$reset_color%}"'
+
+- name: Replace '>' with arrow
+  replace:
+    path: /home/william/.oh-my-zsh/themes/bureau.zsh-theme
+    regexp: "(^PROMPT='> $_LIBERTY ')$"
+    replace: "PROMPT='%{$fg[green]%}➞  %{$reset_color%} $_LIBERTY '"
