--- a/roles/system-config/tasks/shell-config.yml
+++ b/roles/system-config/tasks/shell-config.yml
@@ -53,7 +53,7 @@
 - name: Customize 'bureau' theme in oh-my-zsh
   replace:
     path: /home/william/.oh-my-zsh/themes/bureau.zsh-theme
-    regexp: "(^_USERNAME=\"\\\$_USERNAME)(.*)$"
+    regexp: "(^_USERNAME=\"\\$_USERNAME)(.*)$"
     replace: "_USERNAME=\"$_USERNAME%{$fg_bold[yellow]%}@%m%{$reset_color%}\""
 
 - name: Replace '>' with arrow
