add custom directory color

--- a/roles/system-config/tasks/shell-config.yml
+++ b/roles/system-config/tasks/shell-config.yml
@@ -55,13 +55,19 @@
   replace:
     path: /home/william/.oh-my-zsh/themes/bureau.zsh-theme
     regexp: "(_USERNAME=\"\\%{\\$fg_bold\\[white)(.*)$"
-    replace: "_USERNAME=\"%{$fg_bold[green]%}%n"
+    replace: "_USERNAME=\"%{$fg_bold[green]%}%n\""
 
 - name: Customize 'machine name' for bureau theme in oh-my-zsh
   replace:
     path: /home/william/.oh-my-zsh/themes/bureau.zsh-theme
     regexp: "(^_USERNAME=\"\\$_USERNAME)(.*)$"
     replace: "_USERNAME=\"$_USERNAME%{$fg_bold[yellow]%}@%m%{$reset_color%}\""
+
+- name: Customize 'path' for bureau theme in oh-my-zsh
+  replace:
+    path: /home/william/.oh-my-zsh/themes/bureau.zsh-theme
+    regexp: "(^PATH=\")(.*)$"
+    replace: "_PATH=\"%{$fg_bold[blue]%}%~%{$reset_color%}\""
 
 - name: Replace '>' with arrow
   replace:
