--- a/roles/system-config/tasks/shell-config.yml
+++ b/roles/system-config/tasks/shell-config.yml
@@ -31,12 +31,12 @@
 - name: Get 'zsh-syntax-highlighting' plugin
   git:
     repo: git@github.com:zsh-users/zsh-syntax-highlighting.git
-    dest: ${ZSH}/plugins/zsh-syntax-highlighting
+    dest: "{{ zsh_plugin_location }}/zsh-syntax-highlighting"
 
 - name: Get 'zsh-autosuggestions' plugin
   git:
     repo: git@github.com:zsh-users/zsh-autosuggestions.git
-    dest: ${ZSH}/plugins/zsh-autosuggestions
+    dest: "{{ zsh_plugin_location }}/plugins/zsh-autosuggestions"
 
 - name: Get 'zsh-syntax-highlighting' plugin
   git:
