--- a/roles/system-config/tasks/shell-config.yml
+++ b/roles/system-config/tasks/shell-config.yml
@@ -31,12 +31,24 @@
 - name: Get 'zsh-syntax-highlighting' plugin
   git:
     repo: git@github.com:zsh-users/zsh-syntax-highlighting.git
+    dest: "/home/william/git/zsh-syntax-highlighting"
+
+- name: Move syntax highlight plugin
+  copy:
+    remote_src: yes
+    src: /home/william/git/zsh-syntax-highlighting
     dest: "{{ zsh_plugin_location }}/zsh-syntax-highlighting"
 
 - name: Get 'zsh-autosuggestions' plugin
   git:
     repo: git@github.com:zsh-users/zsh-autosuggestions.git
-    dest: "{{ zsh_plugin_location }}/plugins/zsh-autosuggestions"
+    dest: "/home/william/git/zsh-autosuggestions"
+
+- name: Move autosuggestions plugin
+  copy:
+    remote_src: yes
+    src: /home/william/git/zsh-autosuggestions
+    dest: "{{ zsh_plugin_location }}/zsh-autosuggestions"
 
 - name: Get 'zsh-syntax-highlighting' plugin
   git:
