--- a/site.yml
+++ b/site.yml
@@ -22,57 +22,57 @@
     - role: system-config
       tag:
         - system-config
-#    - role: docker
-#      tag:
-#        - docker
-#    - role: southwest-checkin
-#      tag:
-#        - southwest-checkin
-#    - role: at
-#      tag:
-#        - at
-#        - southwest-check-in
-#    - role: nut
-#      tag:
-#        - nut
-#        - ups
-#    # Applications - Docker
-#    - role: watchtower
-#      tag:
-#        - watchtower
-#        - application
-#    - role: portainer
-#      tag:
-#        - portainer
-#        - application
-#    - role: transmission-openvpn
-#      tag:
-#        - transmission-openvpn
-#        - application
-#    - role: pi-hole
-#      tag:
-#        - pi-hole
-#        - application
-#    - role: plex
-#      tag:
-#        - plex
-#        - application
-#    - role: swag
-#      tag:
-#        - swag
-#        - application
-#    - role: home-assistant
-#      tag:
-#        - home-assistant
-#        - application
-#        - home-automation
-#    - role: node-red
-#      tag:
-#        - node-red
-#        - application
-#        - home-automation
-#    - role: nginx
-#      tag:
-#        - nginx
-#        - application
-#        - home-automation
+    - role: docker
+      tag:
+        - docker
+    - role: southwest-checkin
+      tag:
+        - southwest-checkin
+    - role: at
+      tag:
+        - at
+        - southwest-check-in
+    - role: nut
+      tag:
+        - nut
+        - ups
+    # Applications - Docker
+    - role: watchtower
+      tag:
+        - watchtower
+        - application
+    - role: portainer
+      tag:
+        - portainer
+        - application
+    - role: transmission-openvpn
+      tag:
+        - transmission-openvpn
+        - application
+    - role: pi-hole
+      tag:
+        - pi-hole
+        - application
+    - role: plex
+      tag:
+        - plex
+        - application
+    - role: swag
+      tag:
+        - swag
+        - application
+    - role: home-assistant
+      tag:
+        - home-assistant
+        - application
+        - home-automation
+    - role: node-red
+      tag:
+        - node-red
+        - application
+        - home-automation
+    - role: nginx
+      tag:
+        - nginx
+        - application
+        - home-automation
