--- a/site.yml
+++ b/site.yml
@@ -3,22 +3,22 @@
   vars_files:
     - "vars.yml"
   roles:
-    - role: apt
-      tag:
-        - apt
-    - role: git
-      tag:
-        - git
-    - role: gantsign.oh-my-zsh
-      users:
-        - username: william
-          oh_my_zsh:
-            theme: bureau
-            plugins:
-              - git
-              - debian
-              - zsh-syntax-highlighting
-              - zsh-autosuggestions
+#    - role: apt
+#      tag:
+#        - apt
+#    - role: git
+#      tag:
+#        - git
+#    - role: gantsign.oh-my-zsh
+#      users:
+#        - username: william
+#          oh_my_zsh:
+#            theme: bureau
+#            plugins:
+#              - git
+#              - debian
+#              - zsh-syntax-highlighting
+#              - zsh-autosuggestions
     - role: system-config
       tag:
         - system-config
