add nut shutdown script fix udev location

--- a/roles/nut/tasks/configure.yml
+++ b/roles/nut/tasks/configure.yml
@@ -30,3 +30,12 @@
     dest: /etc/nut/upsd.conf
     owner: root
     group: root
+
+- name: Ensure that custom shutdown script is loaded
+  become: true
+  template:
+    src: home-shutdown.sh
+    dest: /etc/nut/home-shutdown.sh
+    owner: root
+    group: root
+    mode: ugo=rwx
