--- a/roles/nut/templates/upsmon.conf
+++ b/roles/nut/templates/upsmon.conf
@@ -3,7 +3,7 @@ RUN_AS_USER root
 MONITOR eaton@localhost 1 {{ ups_monitor_username }} {{ ups_monitor_password }} master
 
 MINSUPPLIES 1
-SHUTDOWNCMD "/sbin/shutdown -h +0"
+SHUTDOWNCMD "/etc/nut/home-shutdown.sh"
 NOTIFYCMD /usr/sbin/upssched
 POLLFREQ 2
 POLLFREQALERT 1
