--- a/vars.template.yml
+++ b/vars.template.yml
@@ -41,7 +41,11 @@ ha_container_ip: <custom_ha_ip>
 plex_container_ip: <custom_plex_ip>
 pi_hole_container_ip: <custom_pi_hole_ip>
 node_red_container_ip: <node_red_ip>
-nas_ip: <nas_ip>
+
+# NAS Configuration
+nas_ip: <synology_nas_ip>
+nas_ssh_port: <synology_ssh_port>
+nas_admin_user: <synology_user>
 
 # Oh my zsh
 zsh_plugin_location: /.oh-my-zsh/custom/plugins/
