--- a/roles/system-config/tasks/setup-udev-rules.yml
+++ b/roles/system-config/tasks/setup-udev-rules.yml
@@ -2,7 +2,7 @@
 - name: replace '99-com.rules' file
   become: true
   file:
-    src: "99-com.rules"
+    src: "99.rules"
     dest: "/etc/udev/rules.d/99-com.rules"
     state: hard
     owner: root
