--- a/roles/system-config/tasks/setup-udev-rules.yml
+++ b/roles/system-config/tasks/setup-udev-rules.yml
@@ -1,9 +1,8 @@
 ---
 - name: replace '99-com.rules' file
   become: true
-  file:
+  copy:
     src: 99-com.rules
     dest: /etc/udev/rules.d/99-com.rules
-    state: hard
     owner: root
     group: root
