remove service and switch to command

--- a/roles/nut/tasks/restart-service.yml
+++ b/roles/nut/tasks/restart-service.yml
@@ -1,12 +1,8 @@
 ---
 - name: Stop 'UPS - NUT' service
   become: true
-  service:
-    name: upsdvrctl
-    state: stopped
+  command: upsdvrctl stop
 
-- name: Start 'UPS - NUT' service
+- name: Stop 'UPS - NUT' service
   become: true
-  service:
-    name: upsdvrctl
-    state: started
+  command: upsdvrctl start
