final configurations for nut (hopefully)

--- a/roles/nut/tasks/configure.yml
+++ b/roles/nut/tasks/configure.yml
@@ -1,4 +1,11 @@
 ---
+- name: Configure 'standalone' mode
+  become: true
+  replace:
+    path: /etc/nut/nut.conf
+    regexp: (MODE=)(.*)$
+    replace: MODE=standalone
+
 - name: Ensure that the ups.conf is loaded
   become: true
   copy:
