--- a/roles/plex/tasks/mount-media.yml
+++ b/roles/plex/tasks/mount-media.yml
@@ -22,7 +22,7 @@
     fstype: nfs
 
 - name: Mount 'TV Shows'
-  beocome: true
+  become: true
   mount:
     src: "{{ nas_ip }}:volume1/Media/TV\ Shows"
     path: /mnt/nas/tv
