--- a/roles/home-assistant/tasks/main.yml
+++ b/roles/home-assistant/tasks/main.yml
@@ -15,7 +15,7 @@
       - "/docker/home-assistant/config:/config"
       - "/etc/localtime:/etc/localtime:ro"
     devices:
-      - /dev/ttyACM0:/dev/ttyACM0:rwm
+      - /dev/ttyUSB-ZStick-5G:/dev/ttyUSB-ZStick-5G:rwm
     healthcheck:
       test: ["CMD", "curl", "-f", "http://{{ ha_container_ip }}:8123"]
       interval: 30s
