--- a/roles/plex/tasks/mount-media.yml
+++ b/roles/plex/tasks/mount-media.yml
@@ -19,6 +19,7 @@
     src: "{{ nas_ip }}:/volume1/Media/Movies"
     path: /mnt/nas/movies
     state: mounted
+    opts: remount,rw
     fstype: nfs
 
 - name: Mount 'TV Shows'
@@ -27,4 +28,5 @@
     src: "{{ nas_ip }}:volume1/Media/TV\ Shows"
     path: /mnt/nas/tv
     state: mounted
+    opts: remount,rw
     fstype: nfs
