--- a/roles/apt/tasks/main.yml
+++ b/roles/apt/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - import_tasks: sudo.yml
 
-- name: Allow '{{ user_name }}' to be a sudoer
+- name: "Allow '{{ user_name }}' to be a sudoer"
   sudoers:
     name: william-user
     user: william
