--- a/roles/apt/tasks/main.yml
+++ b/roles/apt/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - import_tasks: sudo.yml
 
-- name: "Allow {{ user_name }} to be a sudoer"
+- name: Ensure the user '{{ user_name }}' has sudo access
   sudoers:
     name: "william-user"
     user: "{{ user_name }}"
