--- a/roles/apt/tasks/sudo.yml
+++ b/roles/apt/tasks/sudo.yml
@@ -2,7 +2,7 @@
 - name: "Install 'sudo'"
   become: true
   become_user: root
-  become_method: runas
+  become_method: su
   apt:
     name: sudo
     state: latest
