--- a/roles/apt/tasks/sudo.yml
+++ b/roles/apt/tasks/sudo.yml
@@ -6,3 +6,13 @@
   apt:
     name: sudo
     state: latest
+
+- name: Ensure the user '{{ user_name }}' has sudo access
+  become: true
+  become_user: root
+  become_method: su
+  community.general.sudoers:
+    name: "william-user"
+    user: "{{ user_name }}"
+    state: present
+    commands: ALL
