one thing at a time

--- a/roles/apt/tasks/main.yml
+++ b/roles/apt/tasks/main.yml
@@ -3,6 +3,8 @@
 
 - name: Upgrade the system
   become: true
+  become_user: root
+  become_method: su
   apt:
     update_cache: yes
     upgrade: dist
