--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 INVENTORY = staging
-BECOME_METHOD = sudo
+BECOME_METHOD = su
+BECOME_USER = root
 
 [ssh_connection]
 ssh_args = -o ForwardAgent=yes 
