--- a/roles/transmission-openvpn/tasks/main.yml
+++ b/roles/transmission-openvpn/tasks/main.yml
@@ -5,7 +5,7 @@
     image: haugene/transmission-openvpn
     restart_policy: unless-stopped
     networks:
-      - name: bridge
+      - name: curidge
     pull: true
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
