--- a/roles/docker/tasks/create-network.yml
+++ b/roles/docker/tasks/create-network.yml
@@ -16,3 +16,8 @@
     ipam_config:
       - subnet: "{{ docker_network_ip_outside }}/24"
       - subnet: "{{ docker_network_ip_inside }}/24"
+
+- name: Create custom bridge docker network
+  become: true
+  docker_network:
+    name: curidge
