--- a/roles/swag/tasks/main.yml
+++ b/roles/swag/tasks/main.yml
@@ -7,7 +7,7 @@
     image: ghcr.io/linuxserver/swag
     restart_policy: unless-stopped
     networks:
-      - name: bridge
+      - name: curidge
     pull: true
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
@@ -22,6 +22,8 @@
       VALIDATION: "{{ dns_provider }}"
       DUCKDNSTOKEN: "{{ dns_token }}"
       EMAIL: "{{ contact_email }}"
+    capabilities:
+      - NET_ADMIN
     ports:
       - 443:443
       - 80:80
