--- a/roles/system-config/templates/sshd_conf.conf
+++ b/roles/system-config/templates/sshd_conf.conf
@@ -1,4 +1,4 @@
-Port 22
+Port {{ ssh_port }}
 #AddressFamily any
 #ListenAddress 0.0.0.0
 #ListenAddress ::
@@ -9,7 +9,7 @@ PermitRootLogin no
 # Expect .ssh/authorized_keys2 to be disregarded by default in future.
 AuthorizedKeysFile      /etc/ssh/keys/authorized_keys
 # To disable tunneled clear text passwords, change to no here!
-PasswordAuthentication yes
+PasswordAuthentication no
 
 
 # Default settings below
