--- a/roles/swag/templates/nas.subdomain.conf
+++ b/roles/swag/templates/nas.subdomain.conf
@@ -8,7 +8,7 @@ server {
   include /config/nginx/ssl.conf;
 
   location / {
-    proxy_pass https://{{ nas_ip }}:5000;
+    proxy_pass http://{{ nas_ip }}:5000;
 
     #Defines the HTTP protocol version for proxying
     #by default it it set to 1.0.
