--- a/roles/system-config/tasks/ssh-config.yml
+++ b/roles/system-config/tasks/ssh-config.yml
@@ -1,7 +1,7 @@
 ---
 - name: Update sshd configuration safely, avoid locking yourself out
   template:
-    src: etc/ssh/sshd_config
+    src: sshd_config
     dest: /etc/ssh/sshd_config
     owner: root
     group: root
