--- a/roles/system-config/tasks/ssh-config.yml
+++ b/roles/system-config/tasks/ssh-config.yml
@@ -1,4 +1,14 @@
 ---
+- name: Ensure /etc/ssh/keys is a valid directory
+  become: true
+  become_user: root
+  become_method: sudo
+  file:
+    path: "/etc/ssh/keys"
+    state: directory
+    mode: "0600"
+    owner: root
+
 - name: Update sshd configuration safely, avoid locking yourself out
   become: true
   become_user: root
@@ -7,10 +17,10 @@
     dest: /etc/ssh/sshd_config
     owner: root
     group: root
-    mode: '0600'
+    mode: "0600"
     validate: /usr/sbin/sshd -t -f %s
     backup: yes
-  
+
 - name: Ensure that the .zprofile is loaded
   become: true
   template:
