--- a/vars.template.yml
+++ b/vars.template.yml
@@ -22,6 +22,7 @@ ha_container_ip: <custom_ha_ip>
 plex_container_ip: <custom_plex_ip>
 pi_hole_container_ip: <custom_pi_hole_ip>
 node_red_container_ip: <node_red_ip>
+doku_wiki_container_ip: <doku_wiki_ip>
 
 # Git links
 southwest_ssh_git: ""
