--- a/roles/swag/templates/nas.subdomain.conf
+++ b/roles/swag/templates/nas.subdomain.conf
@@ -1,4 +1,4 @@
-# Node Red
+# Synology NAS - nginx
 server {
   listen 443 ssl;
   listen [::]:443 ssl;
@@ -8,8 +8,6 @@ server {
   include /config/nginx/ssl.conf;
 
   location / {
-    proxy_pass http://{{ nas_ip }}:5000;
-
     #Defines the HTTP protocol version for proxying
     #by default it it set to 1.0.
     #For Websockets and keepalive connections you need to use the version 1.1
@@ -43,6 +41,11 @@ server {
 
     #Defines the original port requested by the client.
     proxy_set_header X-Forwarded-Port $server_port;
+
+    set $upstream_app {{ nas_ip }};
+    set $upstream_port 5000;
+    set $upstream_proto http;
+    proxy_pass $upstream_proto://$upstream_app:$upstream_port;
   }
 
 }
