--- a/roles/swag/templates/node-red.subdomain.conf
+++ b/roles/swag/templates/node-red.subdomain.conf
@@ -8,8 +8,6 @@ server {
   include /config/nginx/ssl.conf;
 
   location / {
-    proxy_pass https://{{ node_red_container_ip }}:1880;
-
     #Defines the HTTP protocol version for proxying
     #by default it it set to 1.0.
     #For Websockets and keepalive connections you need to use the version 1.1
@@ -43,6 +41,11 @@ server {
 
     #Defines the original port requested by the client.
     proxy_set_header X-Forwarded-Port $server_port;
+
+    set $upstream_app {{ node_red_container_ip }};
+    set $upstream_port 1880;
+    set $upstream_proto http;
+    proxy_pass $upstream_proto://$upstream_app:$upstream_port;
   }
 
 }
