--- a/roles/swag/tasks/move-files.yml
+++ b/roles/swag/tasks/move-files.yml
@@ -72,3 +72,13 @@
     mode: "0755"
     owner: william
     group: william
+
+- name: Load 'tautulli.conf'
+  become: true
+  copy:
+    src: "{{ docker_host_location }}/nginx/proxy-confs/tautulli.subdomain.conf.sample"
+    dest: "{{ docker_host_location }}/nginx/proxy-confs/tautulli.subdomain.conf"
+    remote_src: true
+    mode: "0755"
+    owner: william
+    group: william
