--- a/roles/swag/tasks/main.yml
+++ b/roles/swag/tasks/main.yml
@@ -1,5 +1,20 @@
 ---
-- import_tasks: move-files.yml
+- name: Create nginx data volume
+  become: true
+  file:
+    path: "{{ docker_host_location }}"
+    state: directory
+    mode: "0755"
+    owner: root
+
+- import_tasks: setup-ha-dns.yml
+- import_tasks: setup-meals-dns.yml
+- import_tasks: setup-nas-dns.yml
+- import_tasks: setup-node-red-dns.yml
+- import_tasks: setup-pihole-dns.yml
+- import_tasks: setup-portainer-dns.yml
+- import_tasks: setup-tautulli-dns.yml
+- import_tasks: setup-wiki-dns.yml
 
 - name: Run 'swag' - Docker Container
   docker_container:
