separate dns into own directories added piwigo for photos

--- a/roles/dokuwiki/tasks/main.yml
+++ b/roles/dokuwiki/tasks/main.yml
@@ -1,6 +1,8 @@
 ---
 - import_tasks: mount-storage.yml
 
+- import_tasks: setup-dns.yml
+
 - name: Run 'DokuWiki' Docker Container
   docker_container:
     name: wiki
