--- a/roles/home-assistant/tasks/setup-dns.yml
+++ b/roles/home-assistant/tasks/setup-dns.yml
@@ -3,8 +3,8 @@
   become: true
   replace:
     path: "{{ docker_host_location }}/nginx/proxy-confs/homeassistant.subdomain.conf.sample"
-    regexp: "homeassistant"
-    replace: home
+    regexp: "homeassistant.*"
+    replace: home.*
 
 - name: Load 'home-assistant.conf'
   become: true
@@ -12,6 +12,6 @@
     src: "{{ docker_host_location }}/nginx/proxy-confs/homeassistant.subdomain.conf.sample"
     dest: "{{ docker_host_location }}/nginx/proxy-confs/ha.subdomain.conf"
     remote_src: true
-    mode: "0755"
+    mode: "0777"
     owner: william
     group: william
