fix docker runs get uptime-kuma running

--- a/site.yml
+++ b/site.yml
@@ -85,3 +85,8 @@
         - photo
         - application
         - piwigo
+    - role: uptime
+      tag:
+        - uptime
+        - application
+        - monitor
